--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
     "page": "background.html"
   },
   "browser_action": {
-    "default_icon": "gmail_not_logged_in.png"
+    "default_icon": "gmail_not_logged_in.png" //,
+    // "default_popup": "popup.html"
   },
   "default_locale": "en",
   "description": "__MSG_gmailcheck_description__",
